--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 					<div class="grid__item pos-7"><div class="grid__item-img" style="background-image:url(./img/img7.jpg);" class="hover"></div></div>
 					<div class="grid__item pos-8"><div class="grid__item-img" style="background-image:url(./img/img8.jpg);" class="hover"></div></div>
 					<div class="grid__item pos-9"><div class="grid__item-img" style="background-image:url(./img/img9.jpg);" class="hover"></div></div>
-					<div class="grid__item pos-10"><div class="grid__item-img" style="background-image:url(./img/img10.);" class="hover"></div></div>
+					<div class="grid__item pos-10"><div class="grid__item-img" style="background-image:url(./img/img10.jpg);" class="hover"></div></div>
 				</div>
                 <h2 class="content__title no-select">
 					<span>Pricess</span>
 				</h2>
 				<h2 class="content__title no-select">
-					<span class="content__title-sub">Cậu có một mặt trời nhỏ ở trên môi đó, nên đừng bao giờ để ánh dương từ nụ cười của cậu tắt nha</span>
+					<span class="content__title-sub">Cậu là mặt trời nhỏ soi sáng bầu trời đêm</span>
 				</h2>
 			</div>
 		</main>
