--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 					<div class="grid__item pos-10"><div class="grid__item-img" style="background-image:url(./img/img10.jpg);" class="hover"></div></div>
 				</div>
                 <h2 class="content__title no-select">
-					<span>Pricess</span>
+					<span>Princess</span>
 				</h2>
 				<h2 class="content__title no-select">
 					<span class="content__title-sub">Cậu là mặt trời nhỏ soi sáng bầu trời đêm</span>
