--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<p><iframe src="https://www.nhaccuatui.com/mh/background/6LMnJdlflOXa" width="1" height="1" frameborder="0" allowfullscreen allow="autoplay"></iframe></p>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Trương Trần Tâm Như</title>
+		<title>Thanh Vy</title>
 		<link rel="shortcut icon" href="./rose.png">
 		<link rel="stylesheet" href="https://use.typekit.net/eqx3jwb.css">
 		<link rel="stylesheet" type="text/css" href="./style.css">
@@ -40,7 +40,7 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 					<span>Princess</span>
 				</h2>
 				<h2 class="content__title no-select">
-					<span class="content__title-sub">Cậu là mặt trời nhỏ soi sáng bầu trời đêm</span>
+					<span class="content__title-sub">Chị là ngôi sao sáng rực rỡ giữa bầu trời đêm</span>
 				</h2>
 			</div>
 		</main>
